# esp32c3-doom-bauble

./: CMakeLists.txt  README.md  doom1gba.wad  flash-doom-wad.sh  partitions.csv  sdkconfig  sdkconfig.defaults
GbaWadUtil/: GbaWadUtil.pro  README.md  main.cpp  wadfile.h  wadprocessor.cpp  wadprocessor.h
GbaWadUtil/demo/: demo1.lmp
GbaWadUtil/music/: d_e1m1.imf  d_e1m2.imf  d_e1m3.imf  d_e1m4.imf  d_e1m5.imf  d_e1m6.imf  d_e1m7.imf  d_e1m8.imf  d_e1m9.imf  d_inter.imf  d_intro.imf  d_introa.imf  d_victor.imf  notes.txt
case/: .gitignore  case.scad  case.stl
case/files/: body_back.stl  body_face.stl  disks.stl  keyboard.stl  keyboard_post.stl  keys_grey.stl  keys_white.stl  monitor.stl  monitor_face.stl
components/nimble-hid/: blecent.h  hid_ev.c  hid_ev.h  nimble_hid.c  nimble_hid.h  peer.c
esp32c3-doom/: sdkconfig.defaults
esp32c3-doom/GbaWadUtil/: .gitignore  README.md  doomtypes.h  wadfile.cpp  wadprocessor.cpp  wadprocessor.h
esp32c3-doom/main/: d_main.c  doom_iwad.h  doomtype.h  g_game.c  g_game.h  gba_functions.h  global_data.h  i_audio.c  i_main.c  i_system.c  io.h  lcd.c  lcd.h  (+15 more)
main/: CMakeLists.txt  btn.c  btn.h  d_main.c  f_finale.c  g_game.c  i_audio.c  i_main.c  i_system.c  i_system.h  i_video.c  input.c  input.h  lcd.c  lprintf.c  p_inter.c  p_lights.c  p_setup.c  p_sight.c  p_spec.c  r_hotpath.iwram.c  snd_c3.c  snd_c3.h  sounds.c  sounds.h  z_zone.c
main/sdl/: .gitignore  Makefile  i_main_sdl.c  i_system_sdl.c  sdl.c
pcb/: .gitignore  bauble_pcb.kicad_pcb  bauble_pcb.kicad_prl  bauble_pcb.kicad_pro  bauble_pcb.kicad_sch  fp-info-cache
(+30 files in other folders)
